--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/color-convert": "^2.0.4",
+    "color-convert": "^2.0.1",
+    "colorthief": "^2.6.0",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "vite-plugin-checker": "^0.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
