--- a/package.json
+++ b/package.json
@@ -10,12 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.5",
+    "@react-three/drei": "^9.120.4",
+    "@react-three/fiber": "^8.17.10",
+    "@react-three/postprocessing": "^2.16.3",
     "@types/color-convert": "^2.0.4",
+    "@types/three": "^0.171.0",
     "color-convert": "^2.0.1",
     "colorthief": "^2.6.0",
     "lodash": "^4.17.21",
+    "postprocessing": "^6.36.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "rooks": "^7.14.1",
+    "three": "^0.171.0",
+    "three-stdlib": "^2.35.2",
     "vite-plugin-checker": "^0.8.0"
   },
   "devDependencies": {
