--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/drei": "^9.120.4",
     "@react-three/fiber": "^8.17.10",
     "@react-three/postprocessing": "^2.16.3",
+    "@tailwindcss/vite": "^4.0.8",
     "@types/color-convert": "^2.0.4",
     "@types/three": "^0.171.0",
     "color-convert": "^2.0.1",
@@ -23,6 +24,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rooks": "^7.14.1",
+    "tailwindcss": "^4.0.8",
     "three": "^0.171.0",
     "three-stdlib": "^2.35.2",
     "vite-plugin-checker": "^0.8.0"
@@ -32,6 +34,7 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "daisyui": "^5.0.0-beta.8",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
